tests/error/type_match/switch_expr_match_error.bz
// error: unable to match temporary value of type 'int32' to a reference type '&auto'
// error: unable to match temporary value of type 'int32' to a reference type '&auto'
function test(val: int32)
{
	let i = 0;
	let _: &auto = switch (val) {
		0, 1, 2 => i,
		3, 4, 5 => 1,
		else => 2,
	};
}
